--- a/HierArch/HierArch.csproj
+++ b/HierArch/HierArch.csproj
@@ -8,8 +8,9 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>HierArch</RootNamespace>
     <AssemblyName>HierArch</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'AnyCPU' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -57,6 +58,7 @@
     <Compile Include="Base\HAMacroForm.cs" />
     <Compile Include="Base\HAViewInfo.cs" />
     <Compile Include="Parser\ObjectParser.cs" />
+    <Compile Include="Src\About.cs" />
     <Compile Include="Src\AssemblyInfo.cs" />
     <Compile Include="Src\Form1.cs" />
     <Compile Include="Src\HATree.cs" />
@@ -79,6 +81,9 @@
     <Compile Include="Uploader\HAUploaderManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Src\About.resx">
+      <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Src\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -90,7 +95,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\GirlLib\GirlLib.csproj">
+    <ProjectReference Include="..\GirlLib\GirlLib.csproj">
       <Project>{c639ac7f-4152-4c1d-bd61-3155dafca79e}</Project>
       <Name>GirlLib</Name>
     </ProjectReference>
@@ -98,6 +103,9 @@
       <Project>{426c954d-0ac6-4310-a9b3-af68a6a12ce2}</Project>
       <Name>HierArchLib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
